--- a/index.html
+++ b/index.html
@@ -6,11 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Filter Table</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    
+    <div class="contanier">
+
+        <h1 class="center-align">My Contacts</h1>
+
+        <input type="text" id="filter_input" placeholder="Search Name...">
+
+        <ul id="names" class="collection with-header">
+
+            <li class="collection-header">
+                <h5>A</h5>
+            </li>
+            <li class="collection-item">
+                <a href="#">Abe</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Adam</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Alan</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Anna</a>
+            </li>
+
+            <li class="collection-header">
+                <h5>B</h5>
+            </li>
+            <li class="collection-item">
+                <a href="#">Beth</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Bill</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Bob</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Bred</a>
+            </li>
+
+
+            <li class="collection-header">
+                <h5>C</h5>
+            </li>
+            <li class="collection-item">
+                <a href="#">Carrie</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Cathy</a>
+            </li>
+            <li class="collection-item">
+                <a href="#">Courtney</a>
+            </li>
+
+        </ul>
+
+    </div><!--contanier-->
 
 
     <script src="app.js"></script>
